# dm_final_project

./: Makefile  README.md  db_utils.py  pyproject.toml  settings.yaml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: model.ckpt  remote_sensing_data_getter.py  sweep.yaml  train.py
notebooks/meteo/: extract_meteo.py  get_meteo.py  rdams-client.py
notebooks/part_1/: data_uploader_2.py
reports/: experimented_hyperparameters_and_results.csv
