[tool.poetry]
name = "dm_final_project"
version = "0.1.0"
description = ""
authors = ["lgblkb <dbakhtiyarov@nu.edu.kz>"]

[tool.poetry.dependencies]
python = "^3.6.9"
lgblkb_tools = "^1.1.15"
torch = "^1.5.0"
torchvision = "^0.6.0"
pydrive = "^1.3.1"
pysftp = "^0.2.9"
gdal = "2.4.2"
cfgrib = "^0.9.8"
xarray = "^0.15.1"
diskcache = "^4.1.0"
h5py = "^2.10.0"
tables = "^3.6.1"
odo = "^0.5.0"
tslib = "^1.6"
psycopg2 = "^2.8.5"
missingno = "^0.4.2"
sklearn = "^0.0"
wandb = "^0.8.35"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
